--- a/package.json
+++ b/package.json
@@ -24,10 +24,13 @@
     "three": "^0.168.0"
   },
   "devDependencies": {
-    "@types/node": "24.10.1",
-    "eslint": "^9.39.1",
+    "@types/node": "^24.10.1",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
+    "eslint": "^8",
     "eslint-config-next": "^16.0.7",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.9.3"
   }
 }
